Contact details updated

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><img src="images/mail.png" id="icon"> contact@example.com</p>
-                    <p><img src="images/call.png" id="icon"> 0123456789</p>
+                    <p><img src="images/mail.png" id="icon"> tushar331610@gmail.com</p>
+                    <p><img src="images/call.png" id="icon"> 7001474560</p>
                     <div class="social-icons">
                         <!-- <a href=""><img src="images/github.png" id="icon"></a>
                         <a href=""><img src="images/linkedin.png" id="icon"></a>
